# globstar

./: .deepsource.toml  .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  flake.nix  go.mod  go.sum  goreleaser.yaml  readme.md  vercel.json  x.rs
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: build-and-test.yaml  main.yml  release.yml  test.yaml
.globstar/: js-insecure-cors.yml  js-insecure-eval.yml  js-no-debugger.test.js  js-no-eval.test.js  js-no-eval.yml  js-nosql-injection.yml  js-path-traversal.test.js  js-path-traversal.yml  js-weak-crypto.test.js  js-weak-crypto.yml  no_debugger.yml  no_double_eq.go  py-eq-eq-is-bad.yml  py-eq-eq.yml
.globstar/gorules/: go.mod  go.sum  rule.go
.one/: eq-eq-is-bad.test.py  eq-eq-is-bad.yml  no_debugger.test.js  no_debugger.yml
analysis/: analysis_functions.go  analyzer.go  analyzer_test.go  callgraph.go  callpath.go  directory.go  directory_test.go  feature  go_callgraph.go  go_callpath.go  issue.go  language.go  py_scope.go  py_scope_test.go  scope.go  testrunner.go  testrunner_test.go  ts_scope.go  ts_scope_test.go  walk.go  yaml.go  yaml_analyzer.go  yaml_analyzer_test.go  yaml_pattern.go  yaml_rule.go  yaml_test.go
analysis/testdata/: mock-analysis-function.test.js  mock-analysis-function.yml  mock-checker.yml  mock-wrong-checker.yml  node-filter-checker.yml  node-filter-test-checker.test.js  node-filter-test-checker.yml
analysis/testrunner/: file.go  pragma.go
aspen/: Cargo.toml
aspen/src/: context.rs  err.rs  lib.rs  runner.rs  test_utils.rs  traits.rs
cedar/: Cargo.toml
cedar/src/: def.rs  lib.rs  scope.rs  utils.rs
checkers/: checker.go  checker_test.go  functions.go  html_safe.yaml  js-debugger.yml  js-insecure-cors.yml  js-path-traversal.yml  js-weak-crypto.yml  py-avoid-marksafe.test.py  py-avoid-marksafe.yml  py-context-autoescape-off.test.py  py-context-autoescape-off.yml  py-direct-httpresponse.test.py  py-direct-httpresponse.yml  py-distributed-security-required-encryption.test.py  py-distributed-security-required-encryption.yml  py-django-class-custom-extends.test.py  py-empty-aes-key.yml  py-filter-issafe.test.py  py-filter-issafe.yml  py-format-html-param.yml  py-globals-as-template-context.test.py  py-globals-as-template-context.yml  py-hashid-with-django-secret.test.py  py-hashid-with-django-secret.yml  py-html-magic-method.test.py  py-html-magic-method.yml  py-html-safe.test.py  py-html-safe.yml  py-insecure-hash-sha1.test.py  py-insecure-hash-sha1.yml  py-jwt-python-none-alg.test.py  py-jwt-python-none-alg.yml  py-no-else-after-return.test.py  py-no-else-after-return.yml  py-post-after-isvalid.yml  py-raw-html.yml  py-reflect-httpresp.test.py  py-reflect-httpresp.yml  py-safe-string-extend.yml  (+6 more)
checkers/discover/: build.go  copy.go  discover.go  discover_test.go  generate.go  generate_test.go
checkers/docker/: avoid_add.test.Dockerfile  avoid_add.yml  avoid_latest.test.Dockerfile  avoid_latest.yml  avoid_sudo.test.Dockerfile  avoid_sudo.yml
checkers/go/: cgi_import.test.go  cgi_import.yml  cmd_inj_func_arg.test.go  cmd_inj_func_arg.yml  des_weak_crypto.test.go  des_weak_crypto.yml  fmt_print_in_prod.test.go  fmt_print_in_prod.yml  go_insecure_cookie.yml  go_mysql_config_raw_passwd.test.go  go_mysql_config_raw_passwd.yml  grpc_client_insecure_tls.test.go  grpc_client_insecure_tls.yml  grpc_server_insecure_tls.test.go  grpc_server_insecure_tls.yml  html_req_template_injection.test.go  html_req_template_injection.yml  http_file_server.test.go  http_file_server.yml  (+41 more)
cmd/: main.go
docs/: ci-cd-integration.md  contributing.md  index.md  introduction.md  package.json  pnpm-lock.yaml  quickstart.md  roadmap.md  supported-languages.md  tsconfig.json  vercel.json
globstar/: Cargo.toml
globstar/examples/: readme.md
globstar/examples/injections/: injections.scm  main.rs
globstar/examples/scopes/: main.rs  scopes.scm
globstar/examples/simple/: main.rs
globstar/src/: context.rs  err.rs  lib.rs  runner.rs  test_utils.rs  traits.rs
holly/: Cargo.toml
linters/ansible/: Cargo.toml
linters/ansible/queries/: injections.scm  scopes.scm
linters/ansible/src/: lint_utils.rs  lints.rs  main.rs
linters/ansible/src/lints/: command_instead_of_module.rs  deprecated_local_action.rs  literal_compare.rs  package_latest.rs  partial_become.rs  variable_shadowing.rs  vcs_latest.rs
linters/ruby/: Cargo.toml  tater
linters/ruby/src/: lints.rs  main.rs  scopes.scm
linters/ruby/src/lints/: assignment_in_condition.rs  empty_to_json.rs  sussign.rs  useless_cmp.rs  variable_shadowing.rs
marvin/: Cargo.toml
playground/: pnpm-lock.yaml
scope-resolution/: Cargo.toml
util/: cmd.go
(+421 files in other folders)
