[package]
name = "aspen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter = "0.19"
derive_builder = "0.10.2"
pretty_assertions = "1.0.0"
thiserror = "1.0.30"

[dependencies.holly]
path = "../holly"

[dependencies.marvin]
path = "../marvin"
