[package]
name = "globstar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.30"
log = "0.4.14"
regex = "1"

[dependencies.pretty_assertions]
version = "1.0.0"
optional = true

[dependencies.tree-sitter]
git = "https://github.com/akshay-deepsource/tree-sitter"

[dependencies.scope-resolution]
path = "../scope-resolution"

[dependencies.test-utils]
path = "../test-utils"

[dependencies.marvin]
path = "../marvin"

[dev-dependencies.tree-sitter-yaml]
git = "https://github.com/akshay-deepsource/tree-sitter-yaml"
 
[dev-dependencies.tree-sitter-bash]
git = "https://github.com/akshay-deepsource/tree-sitter-bash"

[features]
default = []
testing = ["pretty_assertions"]

