[package]
name = "ruby"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aspen = { path = "../../aspen/" }
marvin = { path = "../../marvin" }
tree-sitter-ruby = { path = "../../langs/tree-sitter-ruby" }
lazy_static = "1.0"
